# CapyInn

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PRD.md  README.en.md  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/plans/: PLAN-backend-polish.md  PLAN-codebase-refactor.md  PLAN-frontend-redesign.md  PLAN-sidebar-expansion.md  frontend-redesign.md
docs/superpowers/specs/: 2026-04-15-backend-booking-domain-refactor-design.md  2026-04-16-readme-refresh-readme-ai-design.md
mhm/: index.html  package-lock.json  package.json  tsconfig.json  vitest.config.ts
mhm/docs/: PLAN-architecture-map.md  PLAN-e2e-test-suite.md  PLAN-e2e-testing.md  PLAN-fix-test-failures.md  PLAN-gap-analysis-deep-research.md  PLAN-group-booking.md  PLAN-invoice-pdf.md  PLAN-reservation-calendar.md  PLAN-room-config.md  PLAN-settings-transactions.md
mhm/skills/: hotel-manager.skill.md  mcp-manifest.json  openapi.yaml
mhm/src/: App.tsx  index.css  vite-env.d.ts
mhm/src-tauri/: Cargo.toml  tauri.conf.json
mhm/src-tauri/icons/: icon.icns
mhm/src-tauri/src/: app_identity.rs  db.rs  lib.rs  main.rs  models.rs  ocr.rs  pricing.rs  watcher.rs
mhm/src-tauri/src/commands/: analytics.rs  audit.rs  auth.rs  billing.rs  bookings.rs  groups.rs  guests.rs  invoices.rs  mod.rs  onboarding.rs  pricing.rs  reservations.rs  room_management.rs  rooms.rs  settings.rs
mhm/src-tauri/src/domain/booking/: error.rs  mod.rs  pricing.rs
mhm/src-tauri/src/gateway/: auth.rs  mod.rs  models.rs  proxy.rs  server.rs  tools.rs
mhm/src-tauri/src/queries/booking/: audit_queries.rs  billing_queries.rs  mod.rs  revenue_queries.rs
mhm/src-tauri/src/repositories/booking/: folio_repository.rs  mod.rs  night_audit_repository.rs
mhm/src-tauri/src/services/booking/: audit_service.rs  billing_service.rs  group_lifecycle.rs  guest_service.rs  mod.rs  reservation_lifecycle.rs  stay_lifecycle.rs  support.rs  tests.rs
mhm/src/__mocks__/: tauri-core.ts  tauri-event.ts
mhm/src/components/: AppLogo.tsx  CheckinSheet.tsx  GroupCheckinSheet.tsx  GroupInvoice.tsx  GuestProfileSheet.tsx  InvoiceDialog.tsx  InvoicePDF.tsx  ReservationSheet.tsx  RoomCard.tsx  RoomDetailPanel.tsx  RoomDrawer.tsx  UnifiedRoomCard.tsx
mhm/src/hooks/: useAvailability.ts  useInvoiceDialog.ts
mhm/src/lib/: appIdentity.test.ts  appIdentity.ts  constants.ts  deferredCleanup.test.ts  deferredCleanup.ts  format.test.ts  format.ts  i18n.ts
mhm/src/pages/: Analytics.tsx  Dashboard.tsx  GroupManagement.tsx  Guests.tsx  Housekeeping.tsx  LoginScreen.tsx  NightAudit.tsx  Reservations.tsx  Rooms.tsx  Statistics.tsx  Timeline.tsx
mhm/tests/: setup.ts
(+60 files in other folders)
